# meecode

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: electron-migration.md
electron/main/: index.ts  sidecar.ts  stub-sidecar.mjs
electron/preload/: index.ts
electron/renderer/: index.html  spike.ts
sidecar/: Cargo.toml
sidecar/src/: bridge.rs  claude_discovery.rs  config.rs  file_watch.rs  files.rs  lsp.rs  main.rs  open_files.rs  session.rs  state.rs  tasks.rs
sidecar/src/claude_process/: mod.rs  protocol.rs  stdin_writer.rs
sidecar/src/history/: list.rs  load_recent.rs  mod.rs
sidecar/src/tasks/: distill.rs  mod.rs  organize.rs
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  file_watch.rs  lib.rs  lsp.rs  main.rs  mcp_server.rs  open_files.rs  pty_manager.rs  session_watcher.rs
src-tauri/src/bindings/: mod.rs
src-tauri/src/claude_process/: mod.rs  protocol.rs  spawn.rs  stdout_parser.rs
src-tauri/src/history/: load_recent.rs  mod.rs
src-tauri/src/organize/: mod.rs
src-tauri/src/pins/: mod.rs
src-tauri/src/tasks/: distill.rs  mod.rs  organize.rs
src-tauri/tests/: protocol.rs  stdin_writer.rs  stdout_parser.rs
src-tauri/tests/fixtures/stream-json/: NOTES.md  basic-turn.jsonl  tool-use.jsonl
src/editor/: models.ts  monacoSetup.ts  navigation.ts
src/hooks/: clientSlash.test.ts  clientSlash.ts  reduceStreamMessage.test.ts  reduceStreamMessage.ts  useCapturePicker.ts  useClaudeSession.test.ts  useClaudeSession.ts  useClaudeStatus.ts  useClickOutside.ts  useComposerSubmit.ts  useDetachedFilePanel.ts  useEscapeDoublePress.ts  useExpandPanel.test.ts  useExpandPanel.ts  useExpandedPair.ts  useFileSave.ts  useFileTabs.ts  useGlobalEscapeInterrupt.ts  useImageAttachments.ts  useImeComposingGuard.ts  useMentionMenu.ts  usePendingSelection.ts  usePersistedBoolean.ts  useProjectKnowledge.ts  usePtyStream.test.ts  usePtyStream.ts  (+18 more)
(+212 files in other folders)
