[package]
name = "meecode-sidecar"
version = "0.1.0"
edition = "2021"

# Standalone, tauri-free backend. Speaks ndjson (req/res/evt) over stdio so the
# Electron main process can drive it. Depends only on pure-Rust crates (no GTK/
# webview system libs), so it builds anywhere — including CI.

[[bin]]
name = "meecode-sidecar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify-debouncer-full = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "fs"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
strip = true
