[package]
name = "meecode"
version = "0.1.0"
description = "MeeCode - Claude Code terminal with markdown rendering"
authors = []
edition = "2021"

[lib]
name = "meecode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "5"
strip-ansi-escapes = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
