[package]
name = "meecode"
version = "0.1.0"
description = "MeeCode - Claude Code terminal with markdown rendering"
authors = []
edition = "2021"

[lib]
name = "meecode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
